# WellSyncAI

./: .env.example  .gitignore  AGENTS.md  BACKEND_FIXES_APPLIED.md  CLAUDE.md  COMPLETE_FIX_REPORT.md  DEPLOYMENT.md  PRD.md  README.md  RUNTIME_API_KEY_MANAGEMENT.md  VOICE_ASSISTANT_STATUS.md  VOICE_FIX_SUMMARY.md  docker-compose.yml  package.json  tsconfig.base.json  turbo.json
Backend/: .dockerignore  .env.example  .vercelignore  Dockerfile  README.md  alembic.ini  check_conns.py  demo_ui.py  kill_idle.py  list_users.py  patch_conftest.py  pyproject.toml  requirements.txt  run_dev.sh  seed_dev.py
Backend/.agents/skills/: .antigravity-install-manifest.json
Backend/alembic/: env.py
Backend/alembic/versions/: 20260412205928_add_auth_user_id.py  51ec1ba63d94_initial_migration.py  8e3d27626eea_initial_stabilization.py
Backend/api/: index.py
Backend/app/: main.py  voice_demo.py
Backend/app/core/: auth.py  config.py  database.py  health.py  password_service.py
Backend/app/models/: __init__.py  conversation.py  dependent.py  growth_record.py  health_event.py  household.py  medicine_regimen.py  pregnancy.py  reminder.py
Backend/app/schemas/: dependent.py  growth.py  household.py  medicine_regimen.py  pregnancy.py  reminder.py  timeline.py
Backend/app/services/: ai_service.py  health_tips.py  ocr_service.py  (+3 more)
Backend/data/: adult_schedule.json  health_tips.json  india_nis_schedule.json  pregnancy_schedule.json
Backend/scripts/: migrate.sh  reset_database.py  seed_simple.py  seed_supabase.py
Backend/tests/: test_household_schemas.py  test_password_service.py
(+242 files in other folders)
